Fix the issue with the mod config File being kind of hard to read